Update gifts to container style

--- a/static/styles.css
+++ b/static/styles.css
@@ -26,3 +26,10 @@ h1 {
 	gap: 1%;
 	text-align: end;
 }
+
+.giftItem {
+	padding: 1vw;
+	margin: 2vw;
+	border-radius: 25px;
+	background-color: #00000053;
+}
